--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -200,7 +200,7 @@
           </div>
           <!-- Edge Caching -->
           <div class="form-group form-inline">
-            <label for="enable_cache" class="col-sm-3 control-label">
+            <label for="enable_cache" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Use to switch to enable/disable the edge caching functionality for the domain. Edge caching is also required for features like management of HTTP headers, origin monitoring and custom VCL rule">
               Edge Caching
             </label>
             <div class="col-md-9">
