Fixed text error in custom VCL code

--- a/code/dev/parts/domains/domain-custom-vcl/domain-custom-vcl.tpl.html
+++ b/code/dev/parts/domains/domain-custom-vcl/domain-custom-vcl.tpl.html
@@ -58,7 +58,7 @@
             </div>
           </div>
         </uib-accordion-group>
-        <uib-accordion-group heading="'Miss' Function">
+        <uib-accordion-group heading="'Deliver' Function">
           <!--“"Deliver" Function" - attribute “rev_component_bp.custom_vcl.deliver"-->
           <div class="form-group" ng-class="{ 'has-error': customVCLForm.vclDeliver.$invalid && customVCLForm.vclDeliver.$dirty }">
             <label for="vclDeliver" class="col-sm-2 control-label" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Enter here a VCL code to be used in Varnish 'vcl_deliver' subroutine">
