--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -53,8 +53,8 @@
         <form class="form-horizontal domain-edit-form" name="editForm" novalidate ng-show="!isAdvancedMode">
           <!-- Display data in Basic Mode -->
           <uib-tabset active="active">
-            <uib-tab index="0" heading="Basic settings">
-              <div class="form-group" ng-class="{'has-error': editForm.app_name.$invalid && editForm.app_name.$dirty}">
+            <uib-tab index="0" heading="General Settings" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Use the tab to configure general domain settings like name and location of web origin, data transfer timeouts, etc">
+               <div class="form-group" ng-class="{'has-error': editForm.app_name.$invalid && editForm.app_name.$dirty}">
                 <label for="domainName" class="col-sm-3 control-label" popover-trigger="mouseenter">Domain Name</label>
                 <div class="col-sm-9">
                   <input type="text" class="form-control" disabled autofocus ng-model="modelInfo.domain_name" id="domain_name" name="domainName" placeholder="Domain Name">
@@ -226,7 +226,74 @@
               </div>
               <hr>
             </uib-tab>
-            <uib-tab index="1" heading="Caching Rules">
+            <uib-tab index="1" heading="Origin Health Monitoring" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="You can manage here whether we should monitor the origin health status and what monitoring parameters to use">
+              <!-- BLOCK Origin Health Monitoring -->
+              <div class="form-group form-inline">
+                <label for="enable_cache" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Enables regular monitoring of origin health and fine-grained control on serving of expired (stale) cached objects in case of origin failures. This functionality requires Edge Caching feature enabled.">
+                  Origin Health Monitoring
+                </label>
+                <div class="col-md-9">
+                  <toggle-switch is-disabled="_loading || (model.rev_component_bp.enable_cache==false || model.rev_component_bp.enable_cache=='false')" ng-model="model.enable_origin_health_probe" on-label="On" off-label="Off">
+                  </toggle-switch>
+                </div>
+              </div>
+              <div class="panel panel-default" ng-if="model.enable_origin_health_probe == true && model.rev_component_bp.enable_cache == true">
+                <div class="panel-body">
+                  <!--  Origin Monitoring HTTP Request-->
+                  <div class="form-group" ng-class="{'has-error': editForm.originHealthProbeHTTP_REQUEST.$invalid && editForm.originHealthProbeHTTP_REQUEST.$dirty}">
+                    <label for="third-party-integrations" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="This string will be sent to the origin HTTP server after connecting to ports 80 and 443. Default value ‘GET / HTTP/1.1’ will work in majority of cases.">
+                      Origin Monitoring HTTP Request
+                    </label>
+                    <div class="col-md-9">
+                      <input type="text" class="form-control" ng-disabled="_loading" name="originHealthProbeHTTP_REQUEST" ng-model="model.origin_health_probe.HTTP_REQUEST" placeholder="Text like 'GET / HTTP/1.1' (300 characters max)" ng-maxlength="300" characters required>
+                      <div class="error-messages" ng-messages="editForm.originHealthProbeHTTP_REQUEST.$error" role="alert" ng-messages-multiple>
+                        <div ng-messages-include="parts/shared/error-messages.html"></div>
+                      </div>
+                    </div>
+                  </div>
+                  <!--  // Origin Monitoring HTTP Request-->
+                  <!--  Probe Timeout-->
+                  <div class="form-group form-inline" ng-class="{'has-error': editForm.originHealthProbePROBE_TIMEOUT.$invalid && editForm.originHealthProbePROBE_TIMEOUT.$dirty}">
+                    <label for="originHealthProbePROBE_TIMEOUT" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Defines for how long the proxy will wait for the origin to respond on monitoring HTTP request (1-60 range)">
+                      Probe Timeout
+                    </label>
+                    <div class="col-md-9">
+                      <input type="number" id="proxy_timeout" name="originHealthProbePROBE_TIMEOUT" class="form-control" ng-disabled="_loading" ng-model="model.origin_health_probe.PROBE_TIMEOUT" ng-min="1" ng-max="60" required> second(s)
+                      <div class="error-messages" ng-messages="editForm.originHealthProbePROBE_TIMEOUT.$error" role="alert" ng-messages-multiple>
+                        <div ng-messages-include="parts/shared/error-messages.html"></div>
+                      </div>
+                    </div>
+                  </div>
+                  <!--  Probe Interval -->
+                  <div class="form-group form-inline" ng-class="{'has-error': editForm.originHealthProbePROBE_INTERVAL.$invalid && editForm.originHealthProbePROBE_INTERVAL.$dirty}">
+                    <label for="originHealthProbePROBE_INTERVAL" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Defines the interval in seconds between origin monitoring checks (1-1800 range)">
+                      Probe Interval
+                    </label>
+                    <div class="col-md-9">
+                      <input type="number" id="origin_health_probe_PROBE_INTERVAL" name="originHealthProbePROBE_INTERVAL" class="form-control" ng-disabled="_loading" ng-model="model.origin_health_probe.PROBE_INTERVAL" ng-min="1" ng-max="1800" required> second(s)
+                      <div class="error-messages" ng-messages="editForm.originHealthProbePROBE_INTERVAL.$error" role="alert" ng-messages-multiple>
+                        <div ng-messages-include="parts/shared/error-messages.html"></div>
+                      </div>
+                    </div>
+                  </div>
+                  <!--  Expected HTTP Response Code-->
+                  <div class="form-group form-inline" ng-class="{'has-error': editForm.originHealthProbeHTTP_STATUS.$invalid && editForm.originHealthProbeHTTP_STATUS.$dirty}">
+                    <label for="originHealthProbeHTTP_STATUS" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="The origin server should respond with this HTTP status code to be considered healthy (range 100-599)">
+                      Expected HTTP Response Code
+                    </label>
+                    <div class="col-md-9">
+                      <input type="number" id="proxy_timeout" name="originHealthProbeHTTP_STATUS" class="form-control" ng-disabled="_loading" ng-model="model.origin_health_probe.HTTP_STATUS" ng-min="100" ng-max="599" required>
+                      <div class="error-messages" ng-messages="editForm.originHealthProbeHTTP_STATUS.$error" role="alert" ng-messages-multiple>
+                        <div ng-messages-include="parts/shared/error-messages.html"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--  //BLOCK Origin Health Monitoring -->
+              <hr>
+            </uib-tab>
+            <uib-tab index="2" heading="Edge Caching" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="This tab allows you to manage edge caching rules for acceleration of static content like images, video, JS and CSS files">
               <!-- Edge Caching -->
               <div class="form-group form-inline">
                 <label for="enable_cache" class="col-sm-3 control-label">
@@ -306,74 +373,8 @@
               </div>
               <hr>
             </uib-tab>
-            <uib-tab index="2" heading="Origin Health Monitoring">
-              <!-- BLOCK Origin Health Monitoring -->
-              <div class="form-group form-inline">
-                <label for="enable_cache" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Enables regular monitoring of origin health and fine-grained control on serving of expired (stale) cached objects in case of origin failures. This functionality requires Edge Caching feature enabled.">
-                  Origin Health Monitoring
-                </label>
-                <div class="col-md-9">
-                  <toggle-switch is-disabled="_loading || (model.rev_component_bp.enable_cache==false || model.rev_component_bp.enable_cache=='false')" ng-model="model.enable_origin_health_probe" on-label="On" off-label="Off">
-                  </toggle-switch>
-                </div>
-              </div>
-              <div class="panel panel-default" ng-if="model.enable_origin_health_probe == true && model.rev_component_bp.enable_cache == true">
-                <div class="panel-body">
-                  <!--  Origin Monitoring HTTP Request-->
-                  <div class="form-group" ng-class="{'has-error': editForm.originHealthProbeHTTP_REQUEST.$invalid && editForm.originHealthProbeHTTP_REQUEST.$dirty}">
-                    <label for="third-party-integrations" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="This string will be sent to the origin HTTP server after connecting to ports 80 and 443. Default value ‘GET / HTTP/1.1’ will work in majority of cases.">
-                      Origin Monitoring HTTP Request
-                    </label>
-                    <div class="col-md-9">
-                      <input type="text" class="form-control" ng-disabled="_loading" name="originHealthProbeHTTP_REQUEST" ng-model="model.origin_health_probe.HTTP_REQUEST" placeholder="Text like 'GET / HTTP/1.1' (300 characters max)" ng-maxlength="300" characters required>
-                      <div class="error-messages" ng-messages="editForm.originHealthProbeHTTP_REQUEST.$error" role="alert" ng-messages-multiple>
-                        <div ng-messages-include="parts/shared/error-messages.html"></div>
-                      </div>
-                    </div>
-                  </div>
-                  <!--  // Origin Monitoring HTTP Request-->
-                  <!--  Probe Timeout-->
-                  <div class="form-group form-inline" ng-class="{'has-error': editForm.originHealthProbePROBE_TIMEOUT.$invalid && editForm.originHealthProbePROBE_TIMEOUT.$dirty}">
-                    <label for="originHealthProbePROBE_TIMEOUT" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Defines for how long the proxy will wait for the origin to respond on monitoring HTTP request (1-60 range)">
-                      Probe Timeout
-                    </label>
-                    <div class="col-md-9">
-                      <input type="number" id="proxy_timeout" name="originHealthProbePROBE_TIMEOUT" class="form-control" ng-disabled="_loading" ng-model="model.origin_health_probe.PROBE_TIMEOUT" ng-min="1" ng-max="60" required> second(s)
-                      <div class="error-messages" ng-messages="editForm.originHealthProbePROBE_TIMEOUT.$error" role="alert" ng-messages-multiple>
-                        <div ng-messages-include="parts/shared/error-messages.html"></div>
-                      </div>
-                    </div>
-                  </div>
-                  <!--  Probe Interval -->
-                  <div class="form-group form-inline" ng-class="{'has-error': editForm.originHealthProbePROBE_INTERVAL.$invalid && editForm.originHealthProbePROBE_INTERVAL.$dirty}">
-                    <label for="originHealthProbePROBE_INTERVAL" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Defines the interval in seconds between origin monitoring checks (1-1800 range)">
-                      Probe Interval
-                    </label>
-                    <div class="col-md-9">
-                      <input type="number" id="origin_health_probe_PROBE_INTERVAL" name="originHealthProbePROBE_INTERVAL" class="form-control" ng-disabled="_loading" ng-model="model.origin_health_probe.PROBE_INTERVAL" ng-min="1" ng-max="1800" required> second(s)
-                      <div class="error-messages" ng-messages="editForm.originHealthProbePROBE_INTERVAL.$error" role="alert" ng-messages-multiple>
-                        <div ng-messages-include="parts/shared/error-messages.html"></div>
-                      </div>
-                    </div>
-                  </div>
-                  <!--  Expected HTTP Response Code-->
-                  <div class="form-group form-inline" ng-class="{'has-error': editForm.originHealthProbeHTTP_STATUS.$invalid && editForm.originHealthProbeHTTP_STATUS.$dirty}">
-                    <label for="originHealthProbeHTTP_STATUS" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="The origin server should respond with this HTTP status code to be considered healthy (range 100-599)">
-                      Expected HTTP Response Code
-                    </label>
-                    <div class="col-md-9">
-                      <input type="number" id="proxy_timeout" name="originHealthProbeHTTP_STATUS" class="form-control" ng-disabled="_loading" ng-model="model.origin_health_probe.HTTP_STATUS" ng-min="100" ng-max="599" required>
-                      <div class="error-messages" ng-messages="editForm.originHealthProbeHTTP_STATUS.$error" role="alert" ng-messages-multiple>
-                        <div ng-messages-include="parts/shared/error-messages.html"></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!--  //BLOCK Origin Health Monitoring -->
-              <hr>
-            </uib-tab>
-            <uib-tab index="3" heading="SSL Configureation">
+
+            <uib-tab index="3" heading="SSL Configuration" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Use the tab to enable/disable SSL support for the domain and manage which SSL certificate to use and which SSL protocols and cipher settings to apply for received SSL requests">
               <!--  “SSL Configuration” -->
               <div class="form-group form-inline">
                 <label for="enable_ssl" class="col-sm-3 control-label">
@@ -460,7 +461,7 @@
               </div>
               <hr>
             </uib-tab>
-            <uib-tab index="4" heading="Custom VCL Rules">
+            <uib-tab index="4" heading="Custom VCL Rules" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="This tab allows Varnish VCL experts to configure custom VCL rules to be applied for the domain configuration">
               <!--  “Custom VCL Rules” -->
               <div class="form-group form-inline">
                 <label for="customVcl" class="col-sm-3 control-label" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Enables you to configure custom Varnish Configuration Language (VCL) rules to be executed by RevAPM edge proxy servers. The feature requires that “Edge Caching” switch will be in ON position">
