--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -324,6 +324,7 @@ ga('create',  window.gaAccount, 'auto');
 
 <script type="text/javascript" src="js/portal/reports/top/topRequests.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/topCacheMiss.directive.js"></script>
+<script type="text/javascript" src="js/portal/reports/top/topCacheHit.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/top404.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/topReferer.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/top5xx.directive.js"></script>
