--- a/code/dev/parts/reports/top.html
+++ b/code/dev/parts/reports/top.html
@@ -50,6 +50,17 @@
 
           <div class="row">
             <div class="col-md-12">
+              <div top-cache-hit
+                   fl-os="os"
+                   fl-device="device"
+                   fl-country="country"
+                   fl-browser="browser"
+                   ng-domain="domain"></div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-12">
               <div top-cache-miss
                    fl-os="os"
                    fl-device="device"
