--- a/code/dev/parts/profile/directives/subscription-summary.tpl.html
+++ b/code/dev/parts/profile/directives/subscription-summary.tpl.html
@@ -26,7 +26,7 @@
       </tr>
       <tr>
         <td>Status </td>
-        <td>{{subscription.state | firstUpper}}</td>
+        <td>{{SudscriptionStates[subscription.state] || 'Unknown'}}</td>
       </tr>
       <tr>
         <td>Active Since</td>
