--- a/code/dev/parts/reports/usage-web.html
+++ b/code/dev/parts/reports/usage-web.html
@@ -323,7 +323,7 @@
                     </td>
                     <td>
                       <span ng-if="usage.deleted" style="color:darkred;">
-                        <i class="glyphicon glyphicon-exclamation-sign" uib-tooltip="Domain is deleted!"></i>
+                        <i class="glyphicon glyphicon-exclamation-sign" uib-tooltip="Deleted Domain"></i>
                       </span>
                       {{domain}}
                     </td>
