--- a/code/dev/parts/profile/activity-log.html
+++ b/code/dev/parts/profile/activity-log.html
@@ -38,88 +38,82 @@
     <button class="btn btn-default" type="button" ng-click="cancel()">Hide</button>
   </div>
 </script>
-
 <div class="container-fluid" ui-view="page">
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
-        Activity Log (Last 40 Records)
+        Activity Log
       </h2>
     </div>
   </div>
-
   <div class="row">
     <div class="col-md-12">
       <div class="panel panel-default">
         <div class="panel-heading">
           <div class="row">
             <div class="col-md-12">
-
+              <div class="pull-left">
+              </div>
               <div class="pull-right">
-                <list-filter></list-filter>
+                <list-filter class="form-group"></list-filter>
               </div>
             </div>
           </div>
         </div>
         <div class="panel-body">
+          <div class="row">
+            <filter-activity-log ng-model="activityFilterObj" on-apply="list" ng-disable="_loading"></filter-activity-log>
+          </div>
           <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
             Currently there are no activity logs available in system
           </div>
-          <div class="alert alert-info" ng-if="_loading">
-            <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
-            Loading...
+          <div class="alert alert-warning" ng-if="records == null && !_loading">
+            Failed to retrieve a list of resources - please try again later
           </div>
-
-          <crud-pagination></crud-pagination>
-
+          <div class="alert alert-info" ng-if="_loading">
+            <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
+          </div>
+          <crud-pagination ng-if="records !== null"></crud-pagination>
           <table class="table">
             <thead>
-            <tr>
-              <th>
-                <a href="" ng-click="order('datetime')">Date/Time</a>
-                <span class="sortorder" ng-show="filter.predicate === 'datetime'"
-                      ng-class="{reverse: filter.reverse}"></span>
-              </th>
-              <th>
-                <a href="" ng-click="order('user_name')">User</a>
-                <span class="sortorder" ng-show="filter.predicate === 'user_name'"
-                      ng-class="{reverse: filter.reverse}"></span>
-              </th>
-              <th>
-                <a href="" ng-click="order('activity_type')">Activity Type</a>
-                <span class="sortorder" ng-show="filter.predicate === 'activity_type'"
-                      ng-class="{reverse: filter.reverse}"></span>
-              </th>
-              <th>
-                <a href="" ng-click="order('activity_target')">Activity Target</a>
-                <span class="sortorder" ng-show="filter.predicate === 'activity_target'"
-                      ng-class="{reverse: filter.reverse}"></span>
-              </th>
-            </tr>
+              <tr>
+                <th>
+                  <a href="" ng-click="order('datetime')">Date/Time</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'datetime'" ng-class="{reverse: filter.reverse}"></span>
+                </th>
+                <th>
+                  <a href="" ng-click="order('user_name')">User</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'user_name'" ng-class="{reverse: filter.reverse}"></span>
+                </th>
+                <th>
+                  <a href="" ng-click="order('activity_type')">Activity Type</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'activity_type'" ng-class="{reverse: filter.reverse}"></span>
+                </th>
+                <th>
+                  <a href="" ng-click="order('activity_target')">Activity Target</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'activity_target'" ng-class="{reverse: filter.reverse}"></span>
+                </th>
+              </tr>
             </thead>
             <tbody>
-            <tr
-              ng-repeat="log in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
-              <td>{{ getRelativeDate(log.datetime) }}</td>
-              <td>
-                <i class="glyphicon glyphicon-user"></i>&nbsp;
-                {{log.user_name}}
-              </td>
-              <td>
-                <!--<i class="glyphicon glyphicon-plus-sign"></i>&nbsp;-->
-                {{getActivityType(log.activity_type)}}
-              </td>
-              <td>
-                <div ng-click="showDetails(log)" class="log-details">
-                  <i class="glyphicon glyphicon-plus-sign"></i>&nbsp;
-                  {{getActivityTarget(log)}}
-                </div>
-              </td>
-            </tr>
+              <tr ng-repeat="log in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
+                <td>{{ getRelativeDate(log.datetime) }}</td>
+                <td>
+                  <i class="glyphicon glyphicon-user"></i>&nbsp; {{log.user_name}}
+                </td>
+                <td>
+                  <!--<i class="glyphicon glyphicon-plus-sign"></i>&nbsp;-->
+                  {{getActivityType(log.activity_type)}}
+                </td>
+                <td>
+                  <div ng-click="showDetails(log)" class="log-details">
+                    <i class="glyphicon glyphicon-plus-sign"></i>&nbsp; {{getActivityTarget(log)}}
+                  </div>
+                </td>
+              </tr>
             </tbody>
           </table>
-          <crud-pagination></crud-pagination>
-
+          <crud-pagination ng-if="records !== null"></crud-pagination>
         </div>
       </div>
     </div>
