Fix CSS style for Top Object Reports

--- a/code/dev/parts/reports/charts/mobile-base-top-objects.html
+++ b/code/dev/parts/reports/charts/mobile-base-top-objects.html
@@ -1,6 +1,6 @@
 <h3 style="margin-top: 0;">{{ heading }}</h3>
 
-<div class="clearfix" style="margin-bottom: 8px;">
+<div class="clearfix">
   <div class="pull-right">
 
     <div mobile-top-objects-filters
