--- a/code/dev/parts/reports/charts/mobile-base-traffic.html
+++ b/code/dev/parts/reports/charts/mobile-base-traffic.html
@@ -1,5 +1,5 @@
 <h3 style="margin-top: 0;">{{ heading }}</h3>
-<div class="clearfix" style="margin-bottom: 8px;">
+<div class="clearfix">
   <div class="pull-right">
     <!-- ng-hide="!ngDomain" -->
     <div mobile-traffic-filters fl-oses="flOses" fl-countries="flCountries" fl-devices="flDevices" fl-operators="flOperators" fl-networks="flNetworks" fl-disabled="flDisabled" ng-filters="filters" on-filter="reload()"></div>
