--- a/code/dev/parts/reports/charts/mobile-hits.html
+++ b/code/dev/parts/reports/charts/mobile-hits.html
@@ -1,4 +1,4 @@
-<div class="clearfix" style="margin-bottom: 8px;">
+<div class="clearfix">
   <div class="pull-right">
 
     <form class="form-inline">
