--- a/code/dev/parts/reports/charts/mobile-top-objects-5xx.html
+++ b/code/dev/parts/reports/charts/mobile-top-objects-5xx.html
@@ -1,6 +1,6 @@
 <h3 style="margin-top: 0;">{{ heading }}</h3>
 
-<div class="clearfix" style="margin-bottom: 8px;">
+<div class="clearfix">
   <div class="pull-right">
 
     <div mobile-top-objects-filters
@@ -16,10 +16,10 @@
   </div>
 </div>
 
-<!-- <div class="alert alert-info" ng-if="_loading">
+<div class="alert alert-info" ng-if="_loading">
   <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
   Loading
-</div> -->
+</div>
 
 <div ng-if="!_loading">
   <div class="alert alert-info" ng-if="!items.length">
