--- a/code/dev/parts/reports/charts/traffic-common.html
+++ b/code/dev/parts/reports/charts/traffic-common.html
@@ -1,5 +1,6 @@
 <h3 class="reports_charts_title">{{ heading }}</h3>
-<div filter-time-periods
+<div class="clearfix"
+     filter-time-periods
      ng-disabled="!ngDomain"
      fl-os="flOs"
      fl-country="flCountry"
