--- a/code/dev/parts/reports/top/top-404.html
+++ b/code/dev/parts/reports/top/top-404.html
@@ -1,5 +1,6 @@
 <h3>Top '404 Not Found' Objects</h3>
-<div filter-top-objects
+<div class="clearfix" style="margin-bottom: 8px;"
+     filter-top-objects
      ng-disabled="!ngDomain"
      fl-os="flOs"
      fl-country="flCountry"
