Fix templates 'filter-activity-log'

--- a/code/dev/parts/shared/filter-activity-log/filter-activity-log.tpl.html
+++ b/code/dev/parts/shared/filter-activity-log/filter-activity-log.tpl.html
@@ -3,12 +3,9 @@
     <div class="col-sm-12 ">
       <label class=" col-xs-12 col-sm-4 col-md-4">Who performed an operation</label>
       <div class="col-xs-12 col-sm-8 col-md-8">
-
-
         <div class="row  ">
-          <activity-who-performed-select style="margin-left: 10px;"class="" ng-model="$ctrl.newFilterState.whoPerformed"></activity-who-performed-select>
+          <activity-who-performed-select style="margin-left: 10px;" ng-model="$ctrl.newFilterState.whoPerformed"></activity-who-performed-select>
         </div>
-
       </div>
     </div>
     <!-- Filter By Action Taker -->
