--- a/code/dev/parts/reports/charts/fbt-distribution.html
+++ b/code/dev/parts/reports/charts/fbt-distribution.html
@@ -1,5 +1,5 @@
 <h3 style="margin-top: 0;">FBT Values Distribution Histogram</h3>
-<div class="clearfix" style="margin-bottom: 8px;">
+<div class="clearfix">
   <div class="pull-right">
 
     <form class="form-inline">
